ini udah gua selesain lu pada baca ya